@@ -1,5 +1,5 @@
 [CUPS]
 ConfigureNewPrinters=yes
 DisablePrintersOnRemoval=yes
-DefaultCUPSPolicy=relaxed
+DefaultCUPSPolicy=
 Debug=yes
